fixed the p tag

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<div id="info">Three.js</div>
-		<div id="info">Use the mouse to navigate </div>
+		<p id="info">Use the mouse to navigate </p>
 		<script src="js/three.js"></script>
 		<script src="js/controls/OrbitControls.js"></script>
 		<script src="js/ObjectLoader.js"></script>
