--- a/index.html
+++ b/index.html
@@ -1,65 +1,39 @@
+<!DOCTYPE html>
 <html>
 	<head>
-		<title>Stori njalsson </title>
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<title>503</title>
+		<meta charset="utf-8">
+				<!-- Latest compiled and minified CSS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<link rel="stylesheet" type="text/css" href="style.css">
+
+		<!-- Optional theme -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<!-- Latest compiled and minified JavaScript -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
 	</head>
+
 	<body>
-		<div id="info">Three.js</div>
-		<p id="info">Use the mouse to navigate </p>
-		<script src="js/three.js"></script>
-		<script src="js/controls/OrbitControls.js"></script>
-		<script src="js/ObjectLoader.js"></script>
-		<script>
-			var scene = new THREE.Scene();
-			var camera = new THREE.PerspectiveCamera( 75, window.innerWidth/window.innerHeight, 0.1, 1000 );
-
-			var renderer = new THREE.WebGLRenderer();
-
-
-			renderer.setSize( window.innerWidth, window.innerHeight );
-			document.body.appendChild( renderer.domElement );
-
-			//if i change the size of the browser, the program changes so.
-			window.addEventListener( 'resize', function()
-			{
-				var height = window.innerHeight;
-				var width  = window.innerWidth;
-				renderer.setSize( width, height);
-				camera.aspect = width / height;
-				camera.updateProjectionMatrix( );
-
-			} );
-
-			//contolling
-
-			controls = new THREE.OrbitControls( camera, renderer.domElement );
+		<div class="container">
+			<p>Fyrir vísiveldi settu x^2, eða hvaða veldi sem er.
+			</p>
+			<p>Forrit er hægt því það reiknar 50.000. púnkta og teiknar hvern á síðunni, reyndi að nota betri aðferðir en þá gat ég ekki reiknað veldi af mínus tölum.</p>
 			
-
-			var loader = new THREE.ObjectLoader( );
-			// fekk model hja https://clara.io/view/d26b7f2f-d412-4bcc-b16a-b1b513c8e80f#
-			loader.load
-			(
-
-				'objects/jupiter.json',
-
-				function( object )
-				{ 
-					scene.add( object );
-				}
-			);
-
-			camera.position.z = 15;
-			var animate = function () 
-			{
-				requestAnimationFrame( animate );
-				renderer.render(scene, camera);
-			};
+			<div class="form-group">
+			  	<label for="pwd">equation:</label>
+			  	<input type="text" class="form-control" id="equation"><br>
+				<button id="button"name="calculatemyproblem" type="button" class="btn btn-success">Draw the equation</button>
+				<button id="clearbutton"class="btn btn-success">Clear the screen</button>
+			</div>
 
 
-			var ambientLight = new THREE.AmbientLight(0xFFFFFF, 0.4);
-			scene.add(ambientLight);
 
-			animate();
-		</script>
+		</div>
+		<canvas id="myCanvas" width="500" height="500"></canvas>
+		<script type="text/javascript" src="app.js"></script>
+		<script  src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>
 	</body>
 </html>
