--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 		<div class="container">
 			<p>Fyrir vísiveldi settu x^2, eða hvaða veldi sem er.
 			</p>
-			<p>Forrit er hægt því það reiknar 50.000. púnkta og teiknar hvern á síðunni, reyndi að nota betri aðferðir en þá gat ég ekki reiknað veldi af mínus tölum.</p>
+			<p>Forrit reiknar 500 punkta(fra -250 upp i 250) og teiknar linu a milli theirra. ad nota minus x virkar ekki vel, hann ovart breytir minus i plus, og sidan virkar fallid ekki</p>
+			<p>hann teiknar allt a hvolfi, eg veit ekki af hverju</p>
 			
 			<div class="form-group">
 			  	<label for="pwd">equation:</label>
@@ -32,7 +33,6 @@
 
 
 		</div>
-		<canvas id="myCanvas" width="500" height="500"></canvas>
 		<script type="text/javascript" src="app.js"></script>
 		<script  src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>
 	</body>
