--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 		<div class="container">
 			<p>Fyrir vísiveldi settu x^2, eða hvaða veldi sem er.
 			</p>
-			<p>Forrit reiknar 500 punkta(fra -250 upp i 250) og teiknar linu a milli theirra. ad nota minus x virkar ekki vel, hann ovart breytir minus i plus, og sidan virkar fallid ekki</p>
-			<p>hann teiknar allt a hvolfi, eg veit ekki af hverju</p>
+			<p>Forrit reiknar 500 punkta(reiknar gildi y frá -250 < x < 250) og teiknar línu á milli þeirra. </p>
+			
 			
 			<div class="form-group">
 			  	<label for="pwd">equation:</label>
