--- a/index.html
+++ b/index.html
@@ -1,39 +1,93 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
-		<title>503</title>
-		<meta charset="utf-8">
-				<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-		<link rel="stylesheet" type="text/css" href="style.css">
-
-		<!-- Optional theme -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-		<!-- Latest compiled and minified JavaScript -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+		
+		<title>Document</title>
 	</head>
-
 	<body>
-		<div class="container">
-			<p>Fyrir vísiveldi settu x^2, eða hvaða veldi sem er.
-			</p>
-			<p>Forrit reiknar 500 punkta(reiknar gildi y frá -250 < x < 250) og teiknar línu á milli þeirra. </p>
-			
-			
-			<div class="form-group">
-			  	<label for="pwd">equation:</label>
-			  	<input type="text" class="form-control" id="equation"><br>
-				<button id="button"name="calculatemyproblem" type="button" class="btn btn-success">Draw the equation</button>
-				<button id="clearbutton"class="btn btn-success">Clear the screen</button>
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<div class="container-fluid">
+				<a class="navbar-brand" href="#">Ship O' Mateys</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+						<li class="nav-item">
+							<a class="nav-link active" aria-current="page" href="#">My Cart</a>
+						</li>
+					</ul>
+					<form class="d-flex">
+						<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+						<button class="btn btn-outline-success" type="submit">Search</button>
+					</form>
+					<div class="dropdown">
+						<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+						Dropdown button
+						</button>
+						<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+							<li><a class="dropdown-item" href="#">Search history</a></li>
+							<li><a class="dropdown-item" href="#">Order history</a></li>
+							<li><a class="dropdown-item" href="#">Edit profile</a></li>
+							<li><a class="dropdown-item" href="#">Sign out</a></li>
+						</ul>
+					</div>
+				</div>
 			</div>
-
-
-
+		</nav>
+		<div class="container">
+			<div class="row">
+				<div class="card col-sm-4" style="width: 18rem;">
+					<img src="images/cheerios.jpeg" class="card-img-top" alt="...">
+					<div class="card-body">
+						<h5 class="card-title">Cheerios</h5>
+						<h6 class="card-subtitle mb-2 text-muted">700kr</h6>
+						<a href="#" class="btn btn-primary">more info</a>
+						<a href="#" class="btn btn-secondary">add to cart</a>
+					</div>
+				</div>
+				<div class="card col-sm-4" style="width: 18rem;">
+					<img src="images/crazyforcockoa.jpeg" class="card-img-top" alt="...">
+					<div class="card-body">
+						<h5 class="card-title">Cocoapuffs</h5>
+						<h6 class="card-subtitle mb-2 text-muted">700kr</h6>
+						<a href="#" class="btn btn-primary">more info</a>
+						<a href="#" class="btn btn-secondary">add to cart</a>
+					</div>
+				</div>
+				<div class="card col-sm-4" style="width: 18rem;">
+					<img src="images/luckycharms.jpeg" class="card-img-top" alt="...">
+					<div class="card-body">
+						<h5 class="card-title">lucky charms</h5>
+						<h6 class="card-subtitle mb-2 text-muted">700kr</h6>
+						<a href="#" class="btn btn-primary">more info</a>
+						<a href="#" class="btn btn-secondary">add to cart</a>
+					</div>
+				</div>
+				<div class="card col-sm-4" style="width: 18rem;">
+					<img src="images/gremlins.png" class="card-img-top" alt="...">
+					<div class="card-body">
+						<h5 class="card-title">gremlins</h5>
+						<h6 class="card-subtitle mb-2 text-muted">5000kr</h6>
+						<a href="#" class="btn btn-primary">more info</a>
+						<a href="#" class="btn btn-secondary">add to cart</a>
+					</div>
+				</div>
+				<div class="card col-sm-4" style="width: 18rem;">
+					<img src="images/mfos.jpeg" class="card-img-top" alt="...">
+					<div class="card-body">
+						<h5 class="card-title">doom</h5>
+						<h6 class="card-subtitle mb-2 text-muted">700kr</h6>
+						<a href="#" class="btn btn-primary">more info</a>
+						<a href="#" class="btn btn-secondary">add to cart</a>
+					</div>
+				</div>
+			</div>
 		</div>
-		<script type="text/javascript" src="app.js"></script>
-		<script  src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>
+		
 	</body>
 </html>
