--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 						<li class="nav-item">
-							<a class="nav-link active" aria-current="page" href="#">My Cart</a>
+							<a class="nav-link active" aria-current="page" href="mycart.html">My Cart</a>
 						</li>
 					</ul>
 					<form class="d-flex">
@@ -41,8 +41,8 @@
 		</nav>
 		<div class="container">
 			<div class="row">
-				<div class="card col-sm-4" style="width: 18rem;">
-					<img src="images/cheerios.jpeg" class="card-img-top" alt="...">
+				<div class="card col-sm-4" style="width: 18rem; margin: 10px 10px 10px 10px;">
+					<img src="images/cheerios.jpeg" class="card-img-top" style="height:400px; width:auto;;margin-top: 10px;" alt="...">
 					<div class="card-body">
 						<h5 class="card-title">Cheerios</h5>
 						<h6 class="card-subtitle mb-2 text-muted">700kr</h6>
@@ -50,8 +50,8 @@
 						<a href="#" class="btn btn-secondary">add to cart</a>
 					</div>
 				</div>
-				<div class="card col-sm-4" style="width: 18rem;">
-					<img src="images/crazyforcockoa.jpeg" class="card-img-top" alt="...">
+				<div class="card col-sm-4" style="width: 18rem; margin: 10px 10px 10px 10px;">
+					<img src="images/crazyforcockoa.jpeg" class="card-img-top" style="height:400px; width:auto;;margin-top: 10px;" alt="...">
 					<div class="card-body">
 						<h5 class="card-title">Cocoapuffs</h5>
 						<h6 class="card-subtitle mb-2 text-muted">700kr</h6>
@@ -59,8 +59,8 @@
 						<a href="#" class="btn btn-secondary">add to cart</a>
 					</div>
 				</div>
-				<div class="card col-sm-4" style="width: 18rem;">
-					<img src="images/luckycharms.jpeg" class="card-img-top" alt="...">
+				<div class="card col-sm-4" style="width: 18rem; margin: 10px 10px 10px 10px;">
+					<img src="images/luckycharms.jpeg" class="card-img-top" style="height:400px; width:auto;; margin-top: 10px;" alt="...">
 					<div class="card-body">
 						<h5 class="card-title">lucky charms</h5>
 						<h6 class="card-subtitle mb-2 text-muted">700kr</h6>
@@ -68,8 +68,8 @@
 						<a href="#" class="btn btn-secondary">add to cart</a>
 					</div>
 				</div>
-				<div class="card col-sm-4" style="width: 18rem;">
-					<img src="images/gremlins.png" class="card-img-top" alt="...">
+				<div class="card col-sm-4" style="width: 18rem; margin: 10px 10px 10px 10px;">
+					<img src="images/gremlins.png" class="card-img-top" style="height:400px; width:auto;;margin-top: 10px;" alt="...">
 					<div class="card-body">
 						<h5 class="card-title">gremlins</h5>
 						<h6 class="card-subtitle mb-2 text-muted">5000kr</h6>
@@ -77,8 +77,8 @@
 						<a href="#" class="btn btn-secondary">add to cart</a>
 					</div>
 				</div>
-				<div class="card col-sm-4" style="width: 18rem;">
-					<img src="images/mfos.jpeg" class="card-img-top" alt="...">
+				<div class="card col-sm-4" style="width: 18rem; margin: 10px 10px 10px 10px;">
+					<img src="images/mfos.jpeg" class="card-img-top" style="height:400px; width:auto;;margin-top: 10px;" alt="...">
 					<div class="card-body">
 						<h5 class="card-title">doom</h5>
 						<h6 class="card-subtitle mb-2 text-muted">700kr</h6>
@@ -88,6 +88,10 @@
 				</div>
 			</div>
 		</div>
-		
+		<nav class="navbar  navbar-light bg-light">
+  <div class="container-fluid">
+    <p>ship O' mateys 2021 copyright</p>
+  </div>
+</nav>
 	</body>
 </html>
