--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					<div class="card-body">
 						<h5 class="card-title">Cheerios</h5>
 						<h6 class="card-subtitle mb-2 text-muted">700kr</h6>
-						<a href="#" class="btn btn-primary">more info</a>
+						<a href="productPage.html" class="btn btn-primary">more info</a>
 						<a href="#" class="btn btn-secondary">add to cart</a>
 					</div>
 				</div>
@@ -55,7 +55,7 @@
 					<div class="card-body">
 						<h5 class="card-title">Cocoapuffs</h5>
 						<h6 class="card-subtitle mb-2 text-muted">700kr</h6>
-						<a href="#" class="btn btn-primary">more info</a>
+						<a href="productPage.html" class="btn btn-primary">more info</a>
 						<a href="#" class="btn btn-secondary">add to cart</a>
 					</div>
 				</div>
@@ -64,7 +64,7 @@
 					<div class="card-body">
 						<h5 class="card-title">lucky charms</h5>
 						<h6 class="card-subtitle mb-2 text-muted">700kr</h6>
-						<a href="#" class="btn btn-primary">more info</a>
+						<a href="productPage.html" class="btn btn-primary">more info</a>
 						<a href="#" class="btn btn-secondary">add to cart</a>
 					</div>
 				</div>
@@ -73,7 +73,7 @@
 					<div class="card-body">
 						<h5 class="card-title">gremlins</h5>
 						<h6 class="card-subtitle mb-2 text-muted">5000kr</h6>
-						<a href="#" class="btn btn-primary">more info</a>
+						<a href="productPage.html" class="btn btn-primary">more info</a>
 						<a href="#" class="btn btn-secondary">add to cart</a>
 					</div>
 				</div>
@@ -82,7 +82,7 @@
 					<div class="card-body">
 						<h5 class="card-title">doom</h5>
 						<h6 class="card-subtitle mb-2 text-muted">700kr</h6>
-						<a href="#" class="btn btn-primary">more info</a>
+						<a href="productPage.html" class="btn btn-primary">more info</a>
 						<a href="#" class="btn btn-secondary">add to cart</a>
 					</div>
 				</div>
