--- a/productPage.html
+++ b/productPage.html
@@ -18,7 +18,7 @@
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 						<li class="nav-item">
-							<a class="nav-link active" aria-current="page" href="mycart.html">My Cart</a>
+							<a class="nav-link active" aria-current="page" href="#">My Cart</a>
 						</li>
 					</ul>
 					<form class="d-flex">
@@ -39,18 +39,32 @@
 				</div>
 			</div>
 		</nav>
+        <br>
 		<div class="container">
-
 			<div class="row">
-				
-				
-			</div>
+				<div class="card col border-0" style="width: 18rem;">
+					<img src="images/cheerios.jpeg" class="card-img-top" alt="...">
+					<div class="card-body">
+                        product number xxxxxxxxxxx
+					</div>
+				</div>
+				<div class="card col border-0" style="width: 18rem;">
+                    <br>
+                    <h5 class="card-title">Cheerios</h5>
+					<div class="card-body">
+                        <div class="position-absolute top-99 start-0">
+                            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+						<h6 class="card-subtitle mb-2 text-muted">700kr</h6>
+						<a href="#" class="btn btn-primary">add to cart</a>
+                    </div>
+					</div>
+				</div>
+				<div class="card col border-0" style="width: 18rem;">
+					<img src="images/cereal nutrition facts.png" class="card-img-top" alt="...">
 
+					</div>
+			</div>
 		</div>
-		<nav class="navbar  navbar-light bg-light">
-  <div class="container-fluid">
-    <p>ship O' mateys 2021 copyright</p>
-  </div>
-</nav>
+		
 	</body>
 </html>
