--- a/orderhistory.html
+++ b/orderhistory.html
@@ -23,7 +23,7 @@
 						<li class="nav-item">
 							<a class="nav-link active" aria-current="page" href="mycart.html">
                                  <img src="images/shopping-cart.png" style="width: 40px; height: 40px;">
-								 <span id="cart">My Cart(0)</span></a>
+                                My Cart</a>
 						</li>
 					</ul>
 					<form class="d-flex">
@@ -38,53 +38,75 @@
 							<li><a class="dropdown-item" href="searchhistory.html">Search history</a></li>
 							<li><a class="dropdown-item" href="orderhistory.html">Order history</a></li>
 							<li><a class="dropdown-item" href="editprofile.html">Edit profile</a></li>
-							<li><a class="dropdown-item" href="homepage.html">Sign out</a></li>
+							<li><a class="dropdown-item" href="signup.html">Sign out</a></li>
 						</ul>
 					</div>
 				</div>
 			</div>
 		</nav>
-        <br>
 		<div class="container">
-			<div class="row">
-				<div class="card col border-0" style="width: 18rem;">
-					<img src="images/cheerios.jpeg" class="card-img-top" alt="..." style="width:300px;height:400px;">
-					<div class="card-body">
-                        <div style="font-size: 13px;">
-                        product number 123456765432 
-						</div>
-					</div>
-				</div>
-				<div class="card col border-0" style="width: 18rem;">
-                    <br>
-                    <h5 class="card-title">Cheerios</h5>
-					<div class="card-body">
-                        <div class="position-absolute top-99 start-0">
-						<h4 class="card-subtitle mb-2 text-muted">7000kr</h4>
-                        
-                        <!-- <br><br><br><br><br><br><br><br><br> -->
-<!-- 						<a href="#" class="btn btn-primary">add to cart</a>
-                        <input type="number" style="width: 45px; padding: 1px" value="69">
- -->
-
-<div class="input-group mb-3" style="margin-top: 90%;">
-  <button class="btn btn-outline-primary" type="button" id="button-addon1" onclick="updatecart()">add to cart</button>
-  <input placeholder="amount of boxes" type="text" onkeypress='validate(event)' class="form-control" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1" style="width: 150px;">
-</div>
-
-                    </div>
-					</div>
-				</div>
-				<div class="card col border-0" style="width: 18rem;">
-					<img src="images/cereal nutrition facts.png" class="card-img-top" alt="...">
-
-					</div>
+            <h2 style="margin-top: 50px;">ORDER HISTORY</h2>
+				<div class="row">
+					<table style="width:30% ;">
+						<thead>
+							<tr>
+								<th scope="col"> </th>
+								<th scope="col"> </th>
+								<th scope="col"> </th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr >
+								<td><a href="orderhistory.html" style="color: black; font-weight: bolder">ORDER HISTORY</a></td>
+								<td><a href="searchhistory.html" style="color: black;">SEARCH HISTORY</a></td>
+								<td><a href="editprofile.html" style="color: black;">EDIT PROFILE</a></td>
+							</tr>
+						</tbody>
+						</table>
+						<br>
+						<hr>
+			<div class="row row-cols-4" style="border-bottom: solid gray 1px; margin-top: 50px;">
+				<div class="col" style="color: gray;">Order id</div>
+				<div class="col" style="color: gray;">Order date</div>
+				<div class="col" style="color: gray;">Bill-to-name</div>
+				<div class="col" style="color: gray;">Total</div>
 			</div>
-		</div>
-		<nav class="navbar  navbar-light bg-light" style="margin-top: 40vh;">
-            <div class="container-fluid">
+			<div class="row row-cols-4" style="margin-top: 10px;">
+				<div class="col">1254223</div>
+				<div class="col">16/04/21</div>
+				<div class="col">John</div>
+				<div class="col">1200 kr</div>
+			  </div>
+			  <div class="row row-cols-4" style="margin-top: 10px;">
+				<div class="col">1547822</div>
+				<div class="col">10/03/21</div>
+				<div class="col">John</div>
+				<div class="col">1350 kr</div>
+			  </div>
+			  <div class="row row-cols-4" style="margin-top: 10px;">
+				<div class="col">1458722</div>
+				<div class="col">12/11/20</div>
+				<div class="col">John</div>
+				<div class="col">2050 kr</div>
+			  </div>
+			  <div class="row row-cols-4" style="margin-top: 10px;">
+				<div class="col">1897521</div>
+				<div class="col">14/10/20</div>
+				<div class="col">John</div>
+				<div class="col">8000 kr</div>
+			  </div>
+			  <div class="row row-cols-4" style="margin-top: 10px;">
+				<div class="col">1345874</div>
+				<div class="col">20/07/20</div>
+				<div class="col">John</div>
+				<div class="col">4500 kr</div>
+			  </div>	
+			</div>
+			  		<nav class="navbar fixed-bottom  navbar-light bg-light">
+			<div class="container-fluid">
 				<p>Copyright 2021 © Ship O' Cereal</p>
-            </div>
-          </nav>
+			</div>
+		</nav>
+
 	</body>
 </html>
