--- a/searchhistory.html
+++ b/searchhistory.html
@@ -83,12 +83,17 @@
                 </tr>
                 <tr id="row2">
                     <td>06.09.2420</td>
-                    <td>"naked girls cereal"</td>
+                    <td>"Damn good cereal"</td>
                     <td><a href='javascript:delete_row2()' style="color: black;"><b><u>X</u></b></a></td>
                 </tr>
                 <tr id="row3">
                     <td>05.02.2021</td>
                     <td>"cheerios"</td>
+                    <td><a href='javascript:delete_row3()' style="color: black;"><b><u>X</u></b></a></td>
+                </tr>
+                <tr id="row4">
+                    <td>05.02.2021</td>
+                    <td>"Sugary and good cereal"</td>
                     <td><a href='javascript:delete_row3()' style="color: black;"><b><u>X</u></b></a></td>
                 </tr>
                 <tr>
