--- a/homepage.html
+++ b/homepage.html
@@ -87,12 +87,39 @@
 						<a href="#" class="btn btn-secondary">add to cart</a>
 					</div>
 				</div>
+				<div class="card col-sm-4" style="width: 18rem; margin: 10px 10px 10px 10px;">
+					<img src="images/ballDunkin.jpeg" class="card-img-top" style="height:400px; width:auto;;margin-top: 10px;" alt="...">
+					<div class="card-body">
+						<h5 class="card-title">Dunk-a- Balls</h5>
+						<h6 class="card-subtitle mb-2 text-muted">1250kr</h6>
+						<a href="productPage.html" class="btn btn-primary">more info</a>
+						<a href="javascript:updatecart()" class="btn btn-secondary">add to cart</a>
+					</div>
+				</div>
+				<div class="card col-sm-4" style="width: 18rem; margin: 10px 10px 10px 10px;">
+					<img src="images/koolaidz.jpeg" class="card-img-top" style="height:400px; width:auto;;margin-top: 10px;" alt="...">
+					<div class="card-body">
+						<h5 class="card-title">Fried kool aid</h5>
+						<h6 class="card-subtitle mb-2 text-muted">700kr</h6>
+						<a href="productPage.html" class="btn btn-primary">more info</a>
+						<a href="javascript:updatecart()" class="btn btn-secondary">add to cart</a>
+					</div>
+				</div>
+				<div class="card col-sm-4" style="width: 18rem; margin: 10px 10px 10px 10px;">
+					<img src="images/crazycrackoes.jpeg" class="card-img-top" style="height:400px; width:auto;;margin-top: 10px;" alt="...">
+					<div class="card-body">
+						<h5 class="card-title">Corn Crackos</h5>
+						<h6 class="card-subtitle mb-2 text-muted">700kr</h6>
+						<a href="productPage.html" class="btn btn-primary">more info</a>
+						<a href="javascript:updatecart()" class="btn btn-secondary">add to cart</a>
+					</div>
+				</div>
 			</div>
 		</div>
 		<nav class="navbar  navbar-light bg-light">
-  <div class="container-fluid">
-    <p>Copyright 2021 © Ship O' Cereal</p>
-  </div>
-</nav>
+			<div class="container-fluid">
+				<p>Copyright 2021 © Ship O' Cereal</p>
+			</div>
+		</nav>
 	</body>
 </html>
