--- a/conformation.html
+++ b/conformation.html
@@ -1,17 +1,14 @@
-P<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Ship O' cereal</title>
-		<link rel="icon" type="image/png" href="images/favicon-lightmode.png"/>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-		<link href="style.css" rel="stylesheet">
-		<script src="test.js"></script>
-		
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
+		<title>Document</title>
 	</head>
-	<body onload="favswitch()">
+	<body>
 		<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #D8D8D8;">
 			<div class="container-fluid">
 				<a class="navbar-brand" href="index.html">Ship O' Cereal</a>
@@ -35,57 +32,24 @@ P<!DOCTYPE html>
 						<img src="images/profile.png"  style="height:50px; width:50px; border-radius: 50%;" alt="profile">
 						</button>
 						<ul id="profile_dd" class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton1">
-							<li><a class="dropdown-item" href="searchhistory.html">Search history</a></li>
-							<li><a class="dropdown-item" href="orderhistory.html">Order history</a></li>
-							<li><a class="dropdown-item" href="editprofile.html">Edit profile</a></li>
-							<li><a class="dropdown-item" href="homepage.html">Sign out</a></li>
+							<li><a class="dropdown-item" href="#">Search history</a></li>
+							<li><a class="dropdown-item" href="#">Order history</a></li>
+							<li><a class="dropdown-item" href="#">Edit profile</a></li>
+							<li><a class="dropdown-item" href="#">Sign out</a></li>
 						</ul>
 					</div>
 				</div>
 			</div>
 		</nav>
 		<div class="container">
-			<h1>Review Order</h1>
-			<h4>Your order</h4>
-			<div class="row">
-				<table class="col table table-light">
-					<thead>
-						<tr>
-							<th scope="col">Product</th>
-							<th scope="col">Quantity</th>
-							<th scope="col">Total price</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<th scope="row">Lucky charms</th>
-							<td>1</td>
-							<td>750</td>
-						</tr>
-						<tr>
-							<th scope="row">Cocoa puffs</th>
-							<td>2</td>
-							<td>2500</td>
-						</tr>
-					</tbody>
-				</table>
-				<div class="card col-sm-4 border-0" style="width: 18rem; margin: 10px 10px 10px 10px;">
-					<div class="card-body">
-						<h3 class="card-title">Shipping info</h3>
-						<p>Name: Svavar Svavarsson</p>
-						<p>Country: Iceland</p>
-						<p>City: Mosfellsbaer</p>
-						<p>zip code: 123</p>
-						<p>cardnumber: 12312321312</p>
-						<a href="confirmation.html" class="btn btn-success">Complete payment</a>
-					</div>
-				</div>
-			</div>
-			<a href="index.html" class="btn btn-danger">Cancel payment</a>
+			<h1>Purchase completed</h1>
+			
+			<br><br><br><br><br>
+			<h1>Takk fyrir viðskiptin</h4>
 		</div>
 		<nav class="navbar fixed-bottom  navbar-light bg-light">
 			<div class="container-fluid">
-				<p>Copyright 2021 © Ship O' Cereal</p>
+				<p>ship O' Cereal 2021 copyright</p>
 			</div>
 		</nav>
 	</body>
