--- a/index.html
+++ b/index.html
@@ -1,152 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 	<head>
-		<title>Ship O' cereal</title>
-		<link rel="icon" type="image/png" href="images/favicon-lightmode.png"/>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-		<link href="style.css" rel="stylesheet">
-		<script src="test.js"></script>
-		
+		<meta charset="utf-8">
+		<title>pillCounter</title>
+		<link rel="stylesheet" href="stylesheet.css">
 	</head>
-	<body onload="favswitch()">
-		<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #D8D8D8;">
-			<div class="container-fluid">
-				<a class="navbar-brand" href="index.html">Ship O' Cereal</a>
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-						<li class="nav-item">
-							<a class="nav-link active" aria-current="page" href="mycart.html">
-								<img src="images/shopping-cart.png" style="width: 40px; height: 40px;">
-								<span id="cart">My Cart(0)</span></a>
-							</li>
-						</ul>
-						<form class="d-flex">
-							<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-							<button class="btn btn-outline-success" type="submit" style="margin-right:20px;">Search</button>
-						</form>
-						<div class="dropdown">
-							<button class="btn" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-							<img src="images/profile.png"  style="height:50px; width:50px; border-radius: 50%;" alt="profile picture" >
-							</button>
-							<ul id="profile_dd" class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton1">
-								<li><a class="dropdown-item" href="searchhistory.html">Search history</a></li>
-								<li><a class="dropdown-item" href="orderhistory.html">Order history</a></li>
-								<li><a class="dropdown-item" href="editprofile.html">Edit profile</a></li>
-								<li><a class="dropdown-item" href="homepage.html">Sign out</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</nav>
-			<div class="container">
-				<div class="row g-3">
-					<div class="col" style="max-width:400px; margin-top: 25px;">
-						
-						<select class="form-select" aria-label="Default select example">
-							<option selected>Filter cereal</option>
-							<option value="1">Healthy</option>
-							<option value="2">Sugary</option>
-							<option value="3">chocolate</option>
-						</select>
-					</div>
-					<div class="col" style="max-width:400px; margin-top: 25px;">
-					<select class="form-select col-auto" aria-label="Default select example">
-						<option selected>Sort by</option>
-						<option value="1">price: low to high</option>
-						<option value="2">price: high to low</option>
-						<option value="3">alphabetically</option>
-						<option value="3">reverse alphabetical order</option>
-					</select>
-						
-					</div>
+	<body>
+		<div id="centr">
+			
+		<h1 id="top"></h1>
+		pls dont refresh or memory is lost 
 
-			</div>
-								<div class="row">
+		<br>
+		<!-- <br> go brrrrrrr
 
-					<div class="card col-sm-4" style="width: 18rem; margin: 10px 10px 10px 10px;">
-						<img src="images/cheerios.jpeg" class="card-img-top" style="height:400px; width:auto;;margin-top: 10px;" alt="...">
-						<div class="card-body">
-							<h5 class="card-title">Cheerios</h5>
-							<h6 class="card-subtitle mb-2 text-muted">700kr</h6>
-							<a href="productPage.html" class="btn btn-primary">more info</a>
-							<a href="javascript:updatecart()" class="btn btn-secondary">add to cart</a>
-						</div>
-					</div>
-					<div class="card col-sm-4" style="width: 18rem; margin: 10px 10px 10px 10px;">
-						<img src="images/crazyforcockoa.jpeg" class="card-img-top" style="height:400px; width:auto;;margin-top: 10px;" alt="...">
-						<div class="card-body">
-							<h5 class="card-title">Cocoapuffs</h5>
-							<h6 class="card-subtitle mb-2 text-muted">700kr</h6>
-							<a href="productPage.html" class="btn btn-primary">more info</a>
-							<a href="javascript:updatecart()" class="btn btn-secondary">add to cart</a>
-						</div>
-					</div>
-					<div class="card col-sm-4" style="width: 18rem; margin: 10px 10px 10px 10px;">
-						<img src="images/luckycharms.jpeg" class="card-img-top" style="height:400px; width:auto;; margin-top: 10px;" alt="...">
-						<div class="card-body">
-							<h5 class="card-title">lucky charms</h5>
-							<h6 class="card-subtitle mb-2 text-muted">700kr</h6>
-							<a href="productPage.html" class="btn btn-primary">more info</a>
-							<a href="javascript:updatecart()" class="btn btn-secondary">add to cart</a>
-						</div>
-					</div>
-					<div class="card col-sm-4" style="width: 18rem; margin: 10px 10px 10px 10px;">
-						<img src="images/gremlins.png" class="card-img-top" style="height:400px; width:auto;;margin-top: 10px;" alt="...">
-						<div class="card-body">
-							<h5 class="card-title">gremlins</h5>
-							<h6 class="card-subtitle mb-2 text-muted">5000kr</h6>
-							<a href="productPage.html" class="btn btn-primary">more info</a>
-							<a href="javascript:updatecart()" class="btn btn-secondary">add to cart</a>
-						</div>
-					</div>
-					<div class="card col-sm-4" style="width: 18rem; margin: 10px 10px 10px 10px;">
-						<img src="images/mfos.jpeg" class="card-img-top" style="height:400px; width:auto;;margin-top: 10px;" alt="...">
-						<div class="card-body">
-							<h5 class="card-title">doom</h5>
-							<h6 class="card-subtitle mb-2 text-muted">700kr</h6>
-							<a href="productPage.html" class="btn btn-primary">more info</a>
-							<a href="javascript:updatecart()" class="btn btn-secondary">add to cart</a>
-						</div>
-					</div>
-					<div class="card col-sm-4" style="width: 18rem; margin: 10px 10px 10px 10px;">
-						<img src="images/ballDunkin.jpeg" class="card-img-top" style="height:400px; width:auto;;margin-top: 10px;" alt="...">
-						<div class="card-body">
-							<h5 class="card-title">Dunk-a- Balls</h5>
-							<h6 class="card-subtitle mb-2 text-muted">1250kr</h6>
-							<a href="productPage.html" class="btn btn-primary">more info</a>
-							<a href="javascript:updatecart()" class="btn btn-secondary">add to cart</a>
-						</div>
-					</div>
-					<div class="card col-sm-4" style="width: 18rem; margin: 10px 10px 10px 10px;">
-						<img src="images/koolaidz.jpeg" class="card-img-top" style="height:400px; width:auto;;margin-top: 10px;" alt="...">
-						<div class="card-body">
-							<h5 class="card-title">Fried kool aid</h5>
-							<h6 class="card-subtitle mb-2 text-muted">700kr</h6>
-							<a href="productPage.html" class="btn btn-primary">more info</a>
-							<a href="javascript:updatecart()" class="btn btn-secondary">add to cart</a>
-						</div>
-					</div>
-					<div class="card col-sm-4" style="width: 18rem; margin: 10px 10px 10px 10px;">
-						<img src="images/crazycrackoes.jpeg" class="card-img-top" style="height:400px; width:auto;;margin-top: 10px;" alt="...">
-						<div class="card-body">
-							<h5 class="card-title">Corn Crackos</h5>
-							<h6 class="card-subtitle mb-2 text-muted">700kr</h6>
-							<a href="productPage.html" class="btn btn-primary">more info</a>
-							<a href="javascript:updatecart()" class="btn btn-secondary">add to cart</a>
-						</div>
-					</div>
-				</div>
-			</div>
-			<nav class="navbar  navbar-light bg-light">
-				<div class="container-fluid">
-					<p>Copyright 2021 © Ship O' Cereal</p>
-				</div>
-			</nav>
-		</body>
-	</html>
+		i could probably set up a local js server that could hold the data with a api but fuckit brrrr
+
+		 -->
+
+		<p>pill: click me</p>
+		</div>
+
+
+
+
+		<script src="index.js"></script>
+
+	</body>
+</html>
